Fix issue #395: Monospace fonts broken on QtWebKit

--- a/inst/www/shared/shiny.css
+++ b/inst/www/shared/shiny.css
@@ -93,4 +93,7 @@ span.jslider {
   max-width: 95%;
 }
 
-
+/* Workaround for Qt, which doesn't use font fallbacks */
+.qt pre, .qt code {
+  font-family: monospace !important;
+}
